feat: add scratchpad enpoint instead of health
